--- a/headtool.html
+++ b/headtool.html
@@ -40,10 +40,10 @@
 			<button onclick=showUnit_kPa(this)><i class="fa fa-calculator"/></button><br>
 			Suction gauge elevation <em>(m)</em><br>
 			<input type=number/>
-			<button onclick=showUnit_m(this)><i class="fa fa-calculator"/></button><br>
+			<button onclick=ShowUnit_m(this)><i class="fa fa-calculator"/></button><br>
 			Discharge gauge elevation <em>(m)</em><br>
 			<input type=number/>
-			<button onclick=showUnit_m(this)><i class="fa fa-calculator"/></button><br>
+			<button onclick=ShowUnit_m(this)><i class="fa fa-calculator"/></button><br>
 			Suction line loss coefficients<br>
 			<input type=number/><br>
 			Discharge line loss coefficients<br>
@@ -96,32 +96,13 @@
 	</tr>
 </table>
 			
-<dialog id=unit>
-  Enter value in <span></span><br>
-  <input><br>
-  <button onclick='this.parentElement.close()'>CANCEL</button>
-  <button onclick='cvtUnitSgl($(this).parent())'>CONVERT</button> 
-</dialog>
 
-<script>
-	function showUnitSgl(e,txt,m) {
-		const dlg = $('#unit');
-		dlg.find('span').html(txt);
-		dlg.data('m',m);
-		ShowUnit(e,dlg);
-	}	
-	function cvtUnitSgl(dlg) {	    
-		cvtUnit(dlg,dlg.data('m'));
-	}
+<script>	
 	function showUnit_mm(e) {
 		showUnitSgl(e,'inches',25.4);
 	}
 	function showUnit_kPa(e) {
 		showUnitSgl(e,'pounds per square inch <em>(psig)</em>',6.89476);
 	}
-	function showUnit_m(e) {
-		showUnitSgl(e,'meters',.3048);
-	}
-
 	
 </script>
