--- a/curve.html
+++ b/curve.html
@@ -2,7 +2,6 @@
 <style scoped>
 	canvas {
 		background-color: black;
-		/*border: 3px solid green;*/
 	}
 </style>
 <div>
@@ -14,7 +13,7 @@
 		<input type=number/><br>	
 	</form><br>
 	<canvas width="700" height="500" /><br>
-	<button onclick='Back()'>BACK</button>
+	<button onclick='back()'>BACK</button>
 </div>
 
 <script>
