--- a/details.html
+++ b/details.html
@@ -65,7 +65,7 @@ Pump Style
   <option>Large end suction</option>
   <option>Specified optimal eff</option>
 </select><br>
-<hr>  
+<hr onclick=load('mock')>  
 
 <table>
   <thead>
