--- a/notes.html
+++ b/notes.html
@@ -45,6 +45,7 @@
 	function save() {
 		if (Idx == Cond.length) {
 			Cond.push({
+				pump_style: 5,
 				pump_rpm: 1780,
 				drive: 0,
 				viscosity: 1,
