--- a/conditions.html
+++ b/conditions.html
@@ -16,19 +16,19 @@
 		vertical-align: middle;
 	}
 </style>
+<button onclick='back()'><i class="fa fa-long-arrow-left"></i></button> 
 <h1>Conditions</h1>
 <ul>
     <li>        	
-    	<button onclick='rm($(this))'><i class="fa fa-times"/></button>  
+    	<button onclick='rm($(this))'><i class="fa fa-times"></i></button>  
     	<span onclick='update(this)'></span>	
     </li>
 </ul>
 <hr>
 <button onclick='nu()'>NEW</button>
 <button>IMPORT</button>
-<button>EXPORT</button>
+<button>IMPORT</button>
 <button onclick='removeAll()'>REMOVE ALL</button>
-<button onclick='back()'>CANCEL</button>
 
 <script>
 	function nu() {
