--- a/notes.html
+++ b/notes.html
@@ -14,7 +14,7 @@
 </style>
 
 
-
+<button onclick='back()'><i class="fa fa-long-arrow-left"/></button>
 <h1>Notes</h1>
 <form>
 	Name<br>
@@ -32,7 +32,7 @@
 	Comments<br>
 	<textarea name='comment' rows=10 cols=100/><br>
 </form>
-<button onclick='save()'>SAVE</button><button onclick='back()'>CANCEL</button>
+<button onclick='save()'>SAVE</button>
 <script>
 	if (Idx<Cond.length) {
 		$('[name]').each(function(i,e) {
