--- a/curve.html
+++ b/curve.html
@@ -4,6 +4,7 @@
 		background-color: black;
 	}
 </style>
+<button onclick='back()'><i class="fa fa-long-arrow-left"></i></button>
 <div>
 	<h1>System Head Curve</h1>
 	<form>
@@ -12,8 +13,7 @@
 		Head<br>
 		<input type=number/><br>	
 	</form><br>
-	<canvas width="700" height="500" /><br>
-	<button onclick='back()'>BACK</button>
+	<canvas width="700" height="500" /><br>	
 </div>
 
 <script>
