--- a/headtool.html
+++ b/headtool.html
@@ -22,6 +22,7 @@
 	}
 }
 </style>
+<button onclick='back()'><i class="fa fa-long-arrow-left"></i></button>
 <h1>Head Tool</h1>
 <table style='width: 100%'>
 	<tr>
@@ -90,8 +91,7 @@
 	<tr>
 		<td/>
 		<td>
-			<button onclick='back()'>ACCEPT</button>
-			<button onclick='back()'>CANCEL</button>
+			<button onclick='back()'>ACCEPT</button>			
 		</td>
 	</tr>
 </table>
