--- a/conditions.html
+++ b/conditions.html
@@ -15,13 +15,12 @@
 	li>* {
 		vertical-align: middle;
 	}
-</style>
-<button onclick='back()'><i class="fa fa-long-arrow-left"></i></button> 
+</style> 
 <h1>Conditions</h1>
 <ul>
     <li>        	
     	<button onclick='rm($(this))'><i class="fa fa-times"></i></button>  
-    	<span onclick='update(this)'></span>	
+    	<span onclick='edit(this)'></span>	
     </li>
 </ul>
 <hr>
@@ -40,7 +39,7 @@
 		Cond = [];
 		Idx = 0;
 		start();
-		$(Main).find('td:nth-child(n+3),th:nth-child(n+3):nth-last-child(n+2)').remove();		
+		//$(Main).find('td:nth-child(n+3),th:nth-child(n+3):nth-last-child(n+2)').remove();		
 	}
 	function rm(e) {
 		let i = e.parent().index()-1;
@@ -54,23 +53,28 @@
 			}
 		});
 	}
-	function update(e) {
+	// function update(e) {
+	// 	Idx = $(e).parent().index()-1;
+	// 	back();
+	// 	setPump();
+	// }
+	function edit(e) {
 		Idx = $(e).parent().index()-1;
-		back();
-		setPump();
+		$('#container').load('notes.html');
 	}
+	
 	function start() {
 		$.each(Cond,function(i,e) {		
-			let th = Main.find('th').filter(function(j,el) {
-		      return i == $(el).data('idx');
-		    });
+			// let th = Main.find('th').filter(function(j,el) {
+		 //      return i == $(el).data('idx');
+		 //    });
 
 			let nu = $('li').first().clone();
 			nu.find('span').text(e.name);
-			if (th.length>0) {
-				nu.find('button').attr('disabled','');
-				nu.find('span').removeAttr('onclick');					
-			}
+			// if (th.length>0) {
+			// 	nu.find('button').attr('disabled','');
+			// 	nu.find('span').removeAttr('onclick');					
+			// }
 			$('ul').append(nu);		  
 		});		
 		if (Cond.length==0) {
