--- a/conditions.html
+++ b/conditions.html
@@ -19,11 +19,13 @@
 <h1>Conditions</h1>
 <ul>
     <li>        	
-    	<button onclick='rm($(this))'><i class="fa fa-times"></i></button>  
+    	<input name='speed' type="checkbox">
     	<span onclick='edit(this)'></span>	
+    	<button onclick='rm($(this))'><i class="fa fa-times"></i></button>
     </li>
 </ul>
 <hr>
+<button onclick=''><i class="fa fa-table"></i></button>
 <button onclick='nu()'>NEW</button>
 <button>IMPORT</button>
 <button>IMPORT</button>
@@ -62,7 +64,7 @@
 		Idx = $(e).parent().index()-1;
 		$('#container').load('notes.html');
 	}
-	
+
 	function start() {
 		$.each(Cond,function(i,e) {		
 			// let th = Main.find('th').filter(function(j,el) {
