--- a/notes.html
+++ b/notes.html
@@ -63,7 +63,9 @@
 				flow: 2000,
 				head: 277,
 				est_power: 150,
-				field_voltage: 460				
+				field_voltage: 460,
+
+				grid: false				
 			});
 		}				
 		$('[name]').each(function(i,e) {
@@ -71,7 +73,7 @@
 		});
 		saveCond();
 		back();
-		setPump();
+		//setPump();
 	}
 	
 </script>
