--- a/grid.html
+++ b/grid.html
@@ -279,7 +279,7 @@
       return Idx == $(e).data('idx');
     });
     if (th.length == 0) {
-      addPump(Cond[Idx]);
+      //addPump(Cond[Idx]);
     } else {
       $(th).find('span').text(Cond[Idx].name);      
     }
@@ -315,7 +315,7 @@
       }
     });    
   } else {
-    setPump();
+    //setPump();
   }
 
 
