--- a/conditions.html
+++ b/conditions.html
@@ -1,4 +1,7 @@
 <style scoped>
+	ul {
+		padding-left: 0;
+	}
 	li {
 		list-style-type:none;
 	}
@@ -24,7 +27,7 @@
     	<button onclick='rm($(this))'><i class="fa fa-times"></i></button>
     </li>
 </ul>
-<hr>
+<!-- <hr> -->
 <button onclick='grid()'><i class="fa fa-table"></i></button>
 <button onclick='nu()'>NEW</button>
 <button>IMPORT</button>
